fix: CLMS-1587 prevent dropdowns from overflowing out of plone left sidemenu

--- a/theme/clms/css/styles.less
+++ b/theme/clms/css/styles.less
@@ -1282,7 +1282,11 @@ main {
   overflow: visible !important;
 }
 
-//CLMS-1587
+// CLMS-1587
 .toolbar-content {
   z-index: 9 !important;
+}
+
+.pastanaga-menu-list li {
+  margin-left: unset !important;
 }
